Refixed a Firefox style issue. Seems like Chrome & Firefox handle a inline-block vs inline display differently when word wrapping.

--- a/src/chat.css
+++ b/src/chat.css
@@ -361,7 +361,7 @@ Username classes
 ---------------------------
 */
 .user-entry .username {
-    display: inline-block;
+    display: inline;
     vertical-align: middle;
     font-weight: bold;
 }
